# template-project

./: .gitignore  Makefile  README.md
.github/workflows/: main.yml
app/: Dockerfile  fly.toml  start-dev.sh  start-prod.sh  start.sh
app/backend/: main.py  pyproject.toml
app/backend/routes/: default_route.py
app/backend/src/: main.py
app/backend/src/routes/: authentication_route.py  default_route.py  dependencies.py
app/backend/src/routes/authentication/: router.py  utils.py
app/backend/src/routes/default/: router.py
app/backend/tests/: test_authentication_route.py  test_default_route.py  test_example_helper.py
app/frontend/: babel.config.cjs  babel.config.esm.cjs  index.html  jest.config.cjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/frontend/backend/static/: index.html
app/frontend/backend/static/assets/: index-027dd56f.js  index-027dd56f.js.map  index-9725b2e1.css
app/frontend/src/: index.css  index.tsx
app/frontend/src/app/: globals.css  layout.tsx
app/frontend/src/app/about/: page.tsx
app/frontend/src/app/contact/: page.tsx
app/frontend/src/app/home/: page.tsx
app/frontend/src/app/login/: page.tsx
app/frontend/src/app/signup/: page.tsx
app/frontend/src/components/: theme-provider.tsx  typography.tsx
app/frontend/src/components/homepage/: background.tsx  header.tsx  pricingsection.tsx
app/frontend/src/components/ui/: authContext.tsx  (+8 more)
app/frontend/static/: index.html
app/frontend/static/assets/: index-64cbc791.js  index-64cbc791.js.map  index-d510df6c.css
ci/: code_coverage.py  color_coverage.py
(+1 files in other folders)
